Refactor XML layouts and add documentation for improved maintainability -3

--- a/app/src/main/res/layout/activity_bookmarks_1.xml
+++ b/app/src/main/res/layout/activity_bookmarks_1.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
 BOOKMARKS ACTIVITY LAYOUT
 Root layout for displaying and managing user bookmarks
 Structure:
