--- a/app/src/main/res/layout/activity_browser_history_1.xml
+++ b/app/src/main/res/layout/activity_browser_history_1.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
 BROWSER HISTORY ACTIVITY LAYOUT
 Displays user's browsing history with:
 1. Action bar with title and clear button
