--- a/app/src/main/res/layout/activity_content_policy_1.xml
+++ b/app/src/main/res/layout/activity_content_policy_1.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
 CONTENT POLICY ACTIVITY LAYOUT
 Displays the app's content policy information with:
 1. Action bar with back button and title
