--- a/app/src/main/res/layout/activity_feedback_1.xml
+++ b/app/src/main/res/layout/activity_feedback_1.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
 USER FEEDBACK ACTIVITY LAYOUT
 Allows users to submit feedback about the app with:
 1. Action bar with back and send buttons
