--- a/app/src/main/res/layout/dialog_default_location_1.xml
+++ b/app/src/main/res/layout/dialog_default_location_1.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     Download Location Selection Dialog
     =================================
     Allows users to choose where downloaded files are saved:
