--- a/app/src/main/res/layout/dialog_language_pick_1.xml
+++ b/app/src/main/res/layout/dialog_language_pick_1.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     LANGUAGE SELECTION DIALOG
     ========================
     Purpose: Allows users to select application language from available options
