--- a/app/src/main/res/layout/dialog_no_video_found_1.xml
+++ b/app/src/main/res/layout/dialog_no_video_found_1.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     This layout defines a custom dialog with:
     - A card view container with rounded corners and elevation
     - An image view for displaying an illustration
