--- a/app/src/main/res/layout/dialog_video_res_picker_1_item.xml
+++ b/app/src/main/res/layout/dialog_video_res_picker_1_item.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     Video Format Item Layout:
     - Displays video resolution and file size information
     - Used as an item in a grid/list of available formats
