--- a/app/src/main/res/layout/frag_down_2_file_renamer_1.xml
+++ b/app/src/main/res/layout/frag_down_2_file_renamer_1.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     LAYOUT: File Rename Dialog
     PURPOSE: Provides interface for renaming downloaded files
     FEATURES:
