--- a/app/src/main/res/layout/frag_home_1_main_1_fav_item_1.xml
+++ b/app/src/main/res/layout/frag_home_1_main_1_fav_item_1.xml
@@ -1,5 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Main container for a website favicon and name display -->
+<?xml version="1.0" encoding="utf-8"?><!--
+    Favicon List Item Layout
+    Displays a website favicon with its name in a clickable container
+    Used in grids/lists of favorite or frequently visited websites
+-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main_container"
     android:layout_width="match_parent"
@@ -10,7 +13,14 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <!-- Website favicon/image displayed at the top -->
+    <!--
+        Website Favicon Image
+        - Fixed width with proportional height (adjustViewBounds)
+        - Centered horizontally in the container
+        - FitCenter scaleType ensures full visibility
+        - Default icon provided (ic_site_google)
+        - Marked unimportant for accessibility (decorative)
+    -->
     <ImageView
         android:id="@+id/img_site_favicon"
         android:layout_width="@dimen/_40"
@@ -21,7 +31,14 @@
         android:scaleType="fitCenter"
         android:src="@drawable/ic_site_google" />
 
-    <!-- Website name displayed below the favicon -->
+    <!--
+        Website Name Label
+        - Single line with ellipsis for overflow
+        - Centered below the favicon
+        - Uses application font family
+        - Small text size for compact display
+        - Vertical margins for visual separation
+    -->
     <TextView
         android:id="@+id/txt_favicon_site_name"
         android:layout_width="wrap_content"
