--- a/app/src/main/res/layout/activity_bookmarks_1_row_1.xml
+++ b/app/src/main/res/layout/activity_bookmarks_1_row_1.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
 BOOKMARK ITEM LAYOUT
 A single row item representing a saved bookmark in a list
 Structure:
