--- a/app/src/main/res/layout/activity_mother_2_frag_holder_1.xml
+++ b/app/src/main/res/layout/activity_mother_2_frag_holder_1.xml
@@ -1,11 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     ViewPager2 layout for swipeable fragments/screens
     Part of a larger layout that includes bottom navigation (referenced via layout_above)
     Typically used with FragmentStateAdapter to manage multiple fragments
 -->
-<androidx.viewpager2.widget.ViewPager2
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.viewpager2.widget.ViewPager2 xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/fragment_viewpager"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
