--- a/app/src/main/res/layout/activity_player_3_con_layout_1.xml
+++ b/app/src/main/res/layout/activity_player_3_con_layout_1.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     ExoPlayer Video Content Layout (Merge Layout)
     Core component for media playback display in ExoPlayer
     Contains all visual elements for video/audio presentation
