--- a/app/src/main/res/layout/activity_transparent_1.xml
+++ b/app/src/main/res/layout/activity_transparent_1.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     Transparent Overlay Layout
     Simple full-screen transparent view used as:
     - Touch interceptor layer
