--- a/app/src/main/res/layout/dialog_extracted_links_item.xml
+++ b/app/src/main/res/layout/dialog_extracted_links_item.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     This layout defines a clickable video item component, typically used in a list.
     It displays video information including a type indicator icon, URL, and metadata.
     The entire item is clickable with visual feedback (selector background).
@@ -108,10 +107,10 @@
             android:layout_marginBottom="@dimen/_5"
             android:layout_toEndOf="@+id/img_video_type_indicator"
             android:fontFamily="@font/application_font_family"
-            android:textStyle="bold"
             android:singleLine="true"
             android:text="@string/text__"
             android:textColor="@color/color_text_primary"
-            android:textSize="@dimen/message_text_size" />
+            android:textSize="@dimen/message_text_size"
+            android:textStyle="bold" />
     </RelativeLayout>
 </RelativeLayout>
