--- a/app/src/main/res/layout/dialog_guide_pick_platform_1.xml
+++ b/app/src/main/res/layout/dialog_guide_pick_platform_1.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     VIDEO SOURCE SELECTION DIALOG
     ============================
     Purpose: Allows users to select video sources/download options from a grid of favicons
