--- a/app/src/main/res/layout/dialog_waiting_progress_1.xml
+++ b/app/src/main/res/layout/dialog_waiting_progress_1.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     LAYOUT: Custom Progress Dialog
     PURPOSE: Displays an animated progress indicator with status message and cancel action
     FEATURES:
@@ -72,9 +71,9 @@
                 android:layerType="hardware"
                 android:visibility="visible"
                 app:lottie_autoPlay="true"
-                app:lottie_rawRes="@raw/anim_color_circle_loading"
                 app:lottie_enableMergePathsForKitKatAndAbove="true"
                 app:lottie_loop="true"
+                app:lottie_rawRes="@raw/anim_color_circle_loading"
                 tools:ignore="ImageContrastCheck,VisualLintBounds" />
 
             <!--
@@ -143,12 +142,12 @@
                     android:drawableTint="@color/color_background"
                     android:ellipsize="end"
                     android:fontFamily="@font/application_font_family"
-                    android:textStyle="bold"
                     android:gravity="center"
                     android:maxLines="1"
                     android:text="@string/title_cancel"
                     android:textColor="@color/color_on_secondary"
-                    android:textSize="@dimen/normal_text_size" />
+                    android:textSize="@dimen/normal_text_size"
+                    android:textStyle="bold" />
             </RelativeLayout>
 
         </LinearLayout>
