--- a/app/src/main/res/layout/frag_brow_2_body_webview_1.xml
+++ b/app/src/main/res/layout/frag_brow_2_body_webview_1.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     LAYOUT: WebView Container
     PURPOSE: Provides a full-screen web browsing component
     FEATURES:
