--- a/app/src/main/res/layout/frag_down_4_finish_1_onclick_1.xml
+++ b/app/src/main/res/layout/frag_down_4_finish_1_onclick_1.xml
@@ -1,4 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?><!--
+    Root layout for a download options dialog
+    Uses a custom dialog style and LinearLayout for vertical arrangement
+-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,6 +10,11 @@
     android:layout_height="wrap_content"
     tools:ignore="UseAppTint,UseCompatTextViewDrawableXml">
 
+    <!--
+        Main CardView container for dialog content
+        Provides elevation, rounded corners and background color
+        Has margins to create visual separation from dialog edges
+    -->
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -18,11 +26,17 @@
         app:cardCornerRadius="@dimen/_10"
         app:cardElevation="@dimen/_5">
 
+        <!-- Vertical LinearLayout to arrange all dialog content -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <!--
+                File information card - Top section
+                Clickable container with elevation and selector background
+                Contains thumbnail and file information
+            -->
             <RelativeLayout
                 android:id="@+id/btn_file_info_card"
                 android:layout_width="match_parent"
@@ -36,6 +50,11 @@
                 android:elevation="@dimen/_2"
                 tools:ignore="DuplicateSpeakableTextCheck">
 
+                <!--
+                    Thumbnail container CardView
+                    Fixed dimensions with small corner radius
+                    Contains an ImageView for the file thumbnail
+                -->
                 <androidx.cardview.widget.CardView
                     android:id="@+id/thumbnail_container"
                     android:layout_width="@dimen/_85"
@@ -57,9 +76,13 @@
                         android:scaleType="centerCrop"
                         android:src="@drawable/image_no_thumb_available"
                         tools:ignore="ImageContrastCheck" />
-
                 </androidx.cardview.widget.CardView>
 
+                <!--
+                    File information container
+                    Positioned to the right of the thumbnail
+                    Contains title, URL, and action button
+                -->
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -69,6 +92,11 @@
                     android:layout_toEndOf="@+id/thumbnail_container"
                     android:orientation="vertical">
 
+                    <!--
+                        File title text with marquee effect
+                        Bold text that scrolls horizontally if too long
+                        Uses custom font family
+                    -->
                     <TextView
                         android:id="@+id/txt_file_title"
                         android:layout_width="match_parent"
@@ -88,6 +116,10 @@
                         android:textSize="@dimen/normal_text_size"
                         android:textStyle="bold" />
 
+                    <!--
+                        URL container with semi-transparent background
+                        Shows the download source URL
+                    -->
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -115,6 +147,11 @@
                             tools:ignore="TextContrastCheck" />
                     </LinearLayout>
 
+                    <!--
+                        Action button (play/open)
+                        Fixed size with centered icon
+                        Uses tint to match color scheme
+                    -->
                     <ImageView
                         android:id="@+id/img_open_file"
                         android:layout_width="@dimen/_30"
@@ -130,16 +167,23 @@
                         android:tint="@color/color_on_secondary"
                         android:visibility="visible"
                         tools:ignore="ImageContrastCheck" />
-
                 </RelativeLayout>
             </RelativeLayout>
 
+            <!--
+                Action buttons section
+                Organized in horizontal pairs with equal weight
+                Each button has an icon and text
+            -->
+
+            <!-- First button row: Open and Share -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:baselineAligned="false"
                 android:orientation="horizontal">
 
+                <!-- Open File button -->
                 <LinearLayout
                     android:id="@+id/btn_open_download_file"
                     android:layout_width="0dp"
@@ -169,6 +213,7 @@
                         android:textSize="@dimen/normal_text_size" />
                 </LinearLayout>
 
+                <!-- Share File button -->
                 <LinearLayout
                     android:id="@+id/btn_share_download_file"
                     android:layout_width="0dp"
@@ -199,12 +244,14 @@
                 </LinearLayout>
             </LinearLayout>
 
+            <!-- Second button row: Clear and Delete -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:baselineAligned="false"
                 android:orientation="horizontal">
 
+                <!-- Clear from List button -->
                 <LinearLayout
                     android:id="@+id/btn_clear_download"
                     android:layout_width="0dp"
@@ -234,6 +281,7 @@
                         android:textSize="@dimen/normal_text_size" />
                 </LinearLayout>
 
+                <!-- Delete File button -->
                 <LinearLayout
                     android:id="@+id/btn_delete_download"
                     android:layout_width="0dp"
@@ -264,12 +312,14 @@
                 </LinearLayout>
             </LinearLayout>
 
+            <!-- Third button row: Rename and Discover More -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:baselineAligned="false"
                 android:orientation="horizontal">
 
+                <!-- Rename File button -->
                 <LinearLayout
                     android:id="@+id/btn_rename_download"
                     android:layout_width="0dp"
@@ -299,6 +349,7 @@
                         android:textSize="@dimen/normal_text_size" />
                 </LinearLayout>
 
+                <!-- Discover More button -->
                 <LinearLayout
                     android:id="@+id/btn_discover_more"
                     android:layout_width="0dp"
@@ -329,6 +380,7 @@
                 </LinearLayout>
             </LinearLayout>
 
+            <!-- Single button row: Show Download Information -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -336,6 +388,7 @@
                 android:baselineAligned="false"
                 android:orientation="horizontal">
 
+                <!-- Show Download Information button -->
                 <LinearLayout
                     android:id="@+id/btn_show_download_information"
                     android:layout_width="0dp"
@@ -365,7 +418,6 @@
                         android:textSize="@dimen/normal_text_size" />
                 </LinearLayout>
             </LinearLayout>
-
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
