docs: cleaned up and improved documentation quality

--- a/app/src/main/res/layout/frag_settings_1_main_1.xml
+++ b/app/src/main/res/layout/frag_settings_1_main_1.xml
@@ -470,6 +470,7 @@
                     android:layout_marginBottom="@dimen/_0"
                     android:background="@drawable/ic_button_negative_selector"
                     android:clickable="true"
+                    android:visibility="gone"
                     android:orientation="vertical"
                     tools:ignore="TouchTargetSizeCheck">
 
